[gd_scene load_steps=2 format=2]

[ext_resource path="res://3d_viewport/painting/utility_texture_viewports/utility_texture_viewports.gd" type="Script" id=1]

[node name="UtilityTextureViewports" type="Node"]
script = ExtResource( 1 )

[node name="ViewToTextureViewport" type="Viewport" parent="."]

[node name="TextureToViewViewport" type="Viewport" parent="."]

[node name="SeamsViewport" type="Viewport" parent="."]
